# color-page

./: LICENSE  README.md  pyproject.toml
src/: app.py  image_processing.py
src/templates/: list_images.html  process_image.html  upload.html
