[project]
name = "color-page"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Willem Reynvaan", email = "willem.reynvaan@outlook.com"},
]
dependencies = ["flask>=3.1.0", "werkzeug>=3.1.3", "opencv-python>=4.11.0.86", "numpy>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
